# AlgoTrading

./: .env.example  .gitignore  CLAUDE_CODE_BRIEF.md  DEVELOPER_ASSIGNMENT.md  DEVELOPER_HANDOVER.md  HANDOFF.md  README.md  RECRUITMENT_BRIEF.md  REVIEW_GUIDE.md  SCOPE.md  WORK_SUMMARY.md  docker-compose.yml
.claude/: launch.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_multileg_and_rules.py  004_strike_selector.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/admin/: routes.py
backend/app/analytics/: routes.py
backend/app/audit/: service.py
backend/app/auth/: bootstrap.py  dependencies.py  models.py  rbac.py  routes.py  schemas.py  security.py  service.py
backend/app/brokers/: __init__.py  axis.py  base.py  jm.py  monarch.py  paper.py  registry.py  routes.py  zerodha.py
backend/app/common/: errors.py  rate_limit.py  slicer.py  types.py
backend/app/data/: models.py  quote_cache.py  routes.py  scheduler.py  security_master.py
backend/app/execution/: idempotency.py  order_manager.py  requote.py  router.py
backend/app/health/: routes.py
backend/app/notify/: channels.py  service.py  templates.py
backend/app/risk/: heartbeat.py  pretrade.py  runtime.py  state.py
backend/app/strategy/: engine.py  models.py  routes.py  schemas.py  service.py  state_machine.py
backend/app/strike_selector/: routes.py  service.py
backend/tests/: test_audit.py  test_auth_security.py  test_idempotency.py  test_risk_runtime.py  test_router.py  test_slicer.py  test_strike_selector.py
backend/tests/load/: README.md  concurrent_strategies.py  rate_limit_stress.py
backend/tests/paper/: harness.py
docs/: CI_SETUP.md  EXTERNAL_AUDIT_PREP.md  (+2 more)
(+50 files in other folders)
